assets/css/style.css
 /* html {
    min-height: 100%;
    
}
body {
    /* display: flex ;
    flex-direction: column;  
    height: 100%
    
}  */

.uk-offcanvas-content {
    /* flex: 1 0 auto; */
    /* margin-bottom: 20px; */
    min-height: Calc(100vh - 150px);
    margin-bottom: 20px;
}

header img{
    width:75px; 
}

footer{
    height: 50px;
}

footer p{
    position: absolute;
    bottom: 10px;
    margin: 0;
    left:Calc(50% - 135px / 2);
}


#social{
    position: relative;
}

#social ul{
    position: absolute;
    right: 5rem;
    bottom:0px;
    list-style: none;
}

#social ul li{
    display: inline;
    
    color:inherit;
}

#social ul li a{
    color: inherit;
}


/*mobile click background*/
button, a {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

@media only screen and (max-width:679px){
    #main{
        width: 100%;
    }
    footer{
        min-height: 80px;
    }

    #social ul{
        width: 100%;
        left:Calc(50% - 330px / 2);
        bottom: 1.5em;  
        padding:5px;
    }
}

